--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="fAQs"/>
+	<classpathentry kind="src" path="src1"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
